# slack-server-mock

./: .gitignore  .pylintrc  Containerfile  Makefile  README.md  mock_web_api_server.py  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: e2e-test.yml  pycodestyle.yml  pylint.yml  release.yml
slack_server_mock/: __main__.py  constants.py
slack_server_mock/actor/: actor.py
slack_server_mock/injector/: di.py
slack_server_mock/servers/: base_http_handlers.py  base_http_server.py
slack_server_mock/servers/actor/: handler.py  server.py
slack_server_mock/servers/http/: handler.py  server.py
slack_server_mock/servers/websocket/: handler.py  server.py
slack_server_mock/settings/: settings.py  settings_loader.py
slack_server_mock/slack_server/: slack_server.py
test/: requirements.txt  slackbot.py  test_echo.py  test_handler.py
test/responses/conversations.history/: c012ab3cd-1512085950.000216.json
test/responses/conversations.info/: c012ab3cd.json  c012ab3ce.json
test/responses/conversations.replies/: c012ab3cd-1512085950.000216.json
