[tool.poetry]
name = "slack-server-mock"
version = "0.1.0"
description = "Mock server for Slack API and WebSocket"
authors = ["Ygal Blum <ygal.blum@gmail.com>"]
license = "Apache Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
injector = "^0.21.0"
pydantic = "^2.7.4"
envyaml = "^1.10.211231"
tornado = "^6.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
